# MiniRT

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ambient.rt  cmake.backup  miniRT  sph.rt
includes/: constants.h  hit_objs.h  keycodes.h  parser.h  types.h
includes/parsing/: lights_parser.h  objects_parser.h  parse_utils.h  parser.h  triangle.h  validate.h  validate_utils.h
includes/rendering/: colors.h  mlx_img.h
includes/utils/: random.h
includes/vector/: op_vec.h  op_vec_double.h  rotate_vec.h
incs/: minirt.h
libs/get_next_line/: Makefile
libs/get_next_line/includes/: libgnl.h
libs/get_next_line/src/: get_next_line.c  get_next_line_utils.c  get_next_line_utils.h
libs/libft/: Makefile
libs/libft/incs/: libft.h
libs/libft/incs/libft/: ft_chars.h  ft_fds.h  ft_lst.h  ft_mems.h  ft_nbrs.h  ft_printf.h  ft_strs.h
libs/libft/srcs/ft_chars/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_putchar.c  ft_tolower.c  ft_toupper.c
libs/libft/srcs/ft_fds/: ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  get_next_line.c
libs/libft/srcs/ft_lst/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
libs/libft/srcs/ft_mems/: ft_bzero.c  ft_calloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c
libs/libft/srcs/ft_nbrs/: ft_atof.c  ft_atoi.c  ft_itoa.c
libs/libft/srcs/ft_printf/: ft_print_c.c  ft_print_nbr.c  ft_print_str.c  ft_printf.c  utils.c
libs/libft/srcs/ft_strs/: ft_putstr.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c
libs/mlx/: Makefile  font.c
scenes/: all.rt  arch.rt  billiard.rt  cylinder.rt  default.rt  laluna.rt  leo.rt  owl.rt  parrot.rt  pillars.rt  plane.rt  plane2.rt  plane3.rt  plante.rt  spheres.rt  tkondrac.rt  triangle.rt
src/: hit_objs.c  hook_utils.c  main.c  parser.c  tmp.c
src/intersections/: cylinder.c  cylinder_caps.c  hit_objs.c  plane.c  sphere.c  triangle.c
src/parsing/: error.c  lights_parser.c  objects_parser.c  parse_utils.c  parser.c  validate.c  validate_utils.c
src/rendering/: colors.c  colors_utils.c  img_threads.c  mlx_img.c
src/utils/: random.c
src/vector/: op_vec.c  op_vec2.c  op_vec_double.c  rotate_vec.c
srcs/: main.c  parser.c
